Archive2/91/7a4a7ffea74f6a/output
main.cpp:1:26: error: use of undeclared identifier 'ray'
auto flippedDirection = -ray.direction;
                         ^
main.cpp:2:15: error: use of undeclared identifier 'brdfAmbient'
auto result = brdfAmbient.rho() * ambientLight.getRadiance();
              ^
main.cpp:2:35: error: use of undeclared identifier 'ambientLight'
auto result = brdfAmbient.rho() * ambientLight.getRadiance();
                                  ^
main.cpp:4:1: error: expected unqualified-id
for (int pointLight = 0; pointLight < numPointLights; ++pointLight) {
^
4 errors generated.
